# shipfast

./: CLAUDE.md  LICENSE  README.md
.claude-plugin/: marketplace.json
dc-due-diligence/: .gitignore  Data Center Due Diligence Workflow Automation.md  PRD-v0.3-compliance-redesign.md  pyproject.toml  requirements.txt  setup.sh
dc-due-diligence/.claude-plugin/: plugin.json
dc-due-diligence/agents/: client-summary-agent.md  commercials-agent.md  connectivity-agent.md  environmental-agent.md  executive-summary-agent.md  land-zoning-agent.md  market-comparables-agent.md  natural-gas-agent.md  ownership-agent.md  power-agent.md  risk-assessment-agent.md  test-agent.md  water-cooling-agent.md
dc-due-diligence/converters/: __init__.py  base.py  docling_converter.py  excel.py  generate_pdf.py  pdf.py  pipeline.py  powerpoint.py  redactor.py  scanner.py  vision.py  word.py
dc-due-diligence/research/: __init__.py  apify_client.py  cache.py  exa_client.py  firecrawl_client.py  manager.py  models.py  rate_limiter.py  tavily_client.py
dc-due-diligence/skills/due-diligence/: SKILL.md
dc-due-diligence/templates/: agent-output-template.md  client-summary-template.md  scoring-rubric.md
dc-due-diligence/tests/: test_apify_client.py  test_cache.py  test_exa_client.py  test_excel_converter.py  test_firecrawl_client.py  test_folder_scanner.py  test_imports.py  test_manager.py  test_pdf_converter.py  test_powerpoint_converter.py  test_rate_limiter.py  test_search_models.py  test_status_reporting.py  test_tavily_client.py  test_vision_converter.py  test_word_converter.py
(+154 files in other folders)
