[project]
name = "dc-due-diligence"
version = "0.3.0"
description = "Data center due diligence workflow automation -- document processing and analysis"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.70.0",
    "gliner>=0.2.0",
    "Pillow>=10.0.0",
    "markdown-pdf>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["converters*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
